# iggy_sample

./: .commitlintrc.json  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  architecture.md  deny.toml  docker-compose.yaml
.claude/: settings.local.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  extended-tests.yml  pr.yml  release.yml
docs/: README.md  durable-storage-guide.md  guide.md  partitioning-guide.md  structured-concurrency.md
docs/code-reviews/: session-01-round1.md  session-01-round2.md  session-02-round1.md  session-02-round2.md
docs/tech-debt/: README.md  TD-2026-07-01.md  TD-2026-07-02.md  TD-2026-07-03.md  TD-2026-07-04.md  TD-2026-07-05.md  TD-2026-07-06.md  TD-2026-07-07.md  TD-2026-07-08.md  TD-2026-07-09.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_validation.rs
observability/grafana/provisioning/dashboards/: dashboards.yml  iggy-overview.json
observability/grafana/provisioning/datasources/: datasources.yml
observability/prometheus/: prometheus.yml
src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs  routes.rs  state.rs  utils.rs  validation.rs
src/handlers/: health.rs  messages.rs  mod.rs  streams.rs  topics.rs  util.rs
src/iggy_client/: circuit_breaker.rs  connection.rs  helpers.rs  mod.rs  params.rs  resilience.rs  scopeguard.rs
src/middleware/: auth.rs  ip.rs  mod.rs  rate_limit.rs  request_id.rs  timeout.rs
src/models/: api.rs  event.rs  mod.rs
src/services/: consumer.rs  mod.rs  producer.rs
tests/: integration_tests.rs  metrics_smoke_test.rs  model_tests.rs
